[SouthKesteven] Added fix for armed forces overlap

--- a/web/cobrands/southkesteven/base.scss
+++ b/web/cobrands/southkesteven/base.scss
@@ -103,6 +103,10 @@ a {
     font-size: 1.375rem;
   }
 
+  p {
+    max-width: 34rem;
+  }
+
   .btn-white {
     display: inline-block;
     color: $primary_b;
@@ -140,6 +144,12 @@ a {
     .footer-nav {
         grid-column: 1;
         grid-row: 3;
+    }
+  }
+
+  .contact-container {
+    p {
+      font-size: 1rem;
     }
   }
 
@@ -266,6 +276,10 @@ a {
       background-repeat: no-repeat;
       background-size: 100%;
     }
+  }
+
+  .armed-forces-logo {
+    margin-left: -7px;
   }
 }
 
